Fix footer alignment

--- a/css/style.scss
+++ b/css/style.scss
@@ -315,6 +315,7 @@ footer a{
 		.post h1, .post_info, .post_index h1, .nav_pagination{
 			text-align: center;
 		}
+
 	}
 
 	footer{
@@ -374,9 +375,14 @@ footer a{
 	.post, .post_index{
 		font-size: 1rem;
 		width: 100%;
-		h1{
-			text-align: center;
-		}
+	}
+
+	.post h1, .post_info, .post_index h1, .nav_pagination{
+		text-align: center;
+	}
+
+	.nav_pagination{
+		width: 100%;
 	}
 
 	.post_info{
